<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.julianzhucode</groupId>
        <artifactId>spring-whale-platform</artifactId>
        <version>0.0.2</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <artifactId>spring-whale-platform-task</artifactId>
    <name>spring-whale-task</name>
    <description>Spring Whale Task Module - Batch task management with progress tracking and breakpoint resume
    </description>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.julianzhucode</groupId>
            <artifactId>spring-whale-platform-task-ui</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.julianzhucode</groupId>
            <artifactId>spring-whale-database</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.julianzhucode</groupId>
            <artifactId>spring-whale-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
